--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,6 +3,9 @@ version: '3'
 tasks:
   generate-api:
     cmds:
-      - go get github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen
       - go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen -package api -generate types,server,spec ./contracts/openapi.yaml > ./internal/transport/http/api/api.gen.go
-      - go mod tidy
+
+  staticcheck:
+    cmds:
+      - docker run --rm -v $(pwd):/app -w /app golang:1.24 sh -c "go install honnef.co/go/tools/cmd/staticcheck@latest && staticcheck ./..."
+    silent: false
